fix styles.css bug

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <div class="h-screen">
     <app-root></app-root>
     </div>  
-    <!-- <link href="dist/output.css" rel="stylesheet"> -->
+    <link href="/dist/output.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
 
   <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
